--- a/id-repository/id-repository-core/pom.xml
+++ b/id-repository/id-repository-core/pom.xml
@@ -153,6 +153,20 @@
 				<artifactId>jackson-datatype-jsr310</artifactId>
 				<version>2.12.0</version>
 			</dependency>
+			<dependency>
+			<groupId>org.mvel</groupId>
+			<artifactId>mvel2</artifactId>
+			<version>2.4.7.Final</version>
+		</dependency><dependency>
+			<groupId>org.mvel</groupId>
+			<artifactId>mvel2</artifactId>
+			<version>2.4.7.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mvel</groupId>
+			<artifactId>mvel2</artifactId>
+			<version>2.4.7.Final</version>
+		</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
