[MOSIP-24670] Made correctons in api body #12th task (#751)
Signed-off-by: kameshsr <kameshsr1338@gmail.com>

--- a/id-repository/id-repository-identity-service/src/test/resources/application-test.properties
+++ b/id-repository/id-repository-identity-service/src/test/resources/application-test.properties
@@ -89,6 +89,10 @@ mosip.kernel.rid.test.invalid-length-rid=2784765736000252018120818305
 
 mosip.kernel.rid.test.valid-custom-sequence-rid=27847657362102520181208183050
 
+#rid id and version
+mosip.idrepo.rid.get.version=1.0
+mosip.idrepo.rid.get.id=mosip.idrepo.rid.get
+
 #-------------------------------------id validator tspid------------------------
 
 mosip.kernel.tspid.test.valid-tspid=1000
