--- a/id-repository/id-repository-identity-service/src/test/resources/application.properties
+++ b/id-repository/id-repository-identity-service/src/test/resources/application.properties
@@ -112,6 +112,10 @@ mosip.kernel.rid.timestamp-length=14
 # rid sequence max digits
 mosip.kernel.rid.sequence-length=5
 
+#rid id and version
+mosip.idrepo.rid.get.version=1.0
+mosip.idrepo.rid.get.id=mosip.idrepo.rid.get
+
 # Upper bound of number of digits in sequence allowed in id. For example if
 # limit is 3, then 12 is allowed but 123 is not allowed in id (in both
 # ascending and descending order)
