MOSIP-32302 Fixed merge conflict
Signed-off-by: kameshsr <kameshsr1338@gmail.com>

--- a/id-repository/credential-service/src/test/resources/application.properties
+++ b/id-repository/credential-service/src/test/resources/application.properties
@@ -45,3 +45,13 @@ mosip.kernel.tokenid.length=36
 mosip.kernel.tokenid.partnercode.salt=yS8w5Wb6vhIKdf1msi4LYTJks7mqkbmITk2O63Iq8h0bkRlD0d
 # Map to find the realm for the inputted appid to get the token from OIDC provider.
 mosip.kernel.auth.appids.realm.map={prereg:'preregistration',ida:'mosip',registrationclient:'mosip',regproc:'mosip',partner:'mosip',resident:'mosip',admin:'mosip',crereq:'mosip',creser:'mosip',datsha:'mosip'}
+
+mosip.format.function.name=formatName
+mosip.format.function.address=formatAddress
+mosip.mask.function.identityAttributes.default=convertToMaskData
+mosip.mask.function.identityAttributes.phone=maskPhone
+mosip.mask.function.identityAttributes.email=maskEmail
+
+mosip.credential.photo.attribute.names=photo,face
+mosip.credential.name.attribute.names=fullName,name
+mosip.credential.address.attribute.names=fullAddress,address
