--- a/id-repository/id-repository-identity-service/pom.xml
+++ b/id-repository/id-repository-identity-service/pom.xml
@@ -29,6 +29,21 @@
 	<dependencies>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-auth-adapter</artifactId>
+			<version>1.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.biosdk</groupId>
+			<artifactId>biosdk-client</artifactId>
+			<version>1.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
+			<artifactId>kernel-ref-idobjectvalidator</artifactId>
+			<version>1.3.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-core</artifactId>
 			<version>${kernel.core.version}</version>
 			<exclusions>
